<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="request_failed">请求失败</string>
    <string name="app_name">安马文学</string>
    <string name="connect_time_out">连接服务器超时</string>
    <string name="network_error">网络异常</string>
    <string name="take_photo_failed">启动相机失败，请检查权限设置</string>
    <string name="open_album_failed">打开相册失败，请检查权限设置</string>
    <string name="request_error">请求失败</string>
    <string name="not_login">请求先登录</string>
    <string name="loading">请稍等……</string>
    <string name="login">登录</string>
    <string name="cancel_login">您取消了登录</string>
    <string name="login_failed">登录失败</string>
    <string name="code_login">验证码登录</string>
    <string name="passoword_login">密码登录</string>
    <string name="username_empty">账户不能为空</string>
    <string name="password_empty">密码不能为空</string>
    <string name="password_lenght_error">密码长度不对</string>
    <string name="login_success">登录成功</string>
    <string name="phone_number">手机号/账户</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="find_password">找回密码</string>
    <string name="change_password">修改密码</string>
    <string name="change_password_success">修改密码成功</string>
    <string name="register">注册</string>
    <string name="other_login">其他方式登录</string>
    <string name="wechat">微信</string>
    <string name="share_friend_cirle">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="qq_zone">QQ空间</string>
    <string name="weibo">微博</string>
    <string name="hint_phone_number">请输入手机号码</string>
    <string name="hint_register_phone_number">请输入注册手机号码</string>
    <string name="hint_bind_phone_number">请输入绑定手机号码</string>
    <string name="hint_bind_phone_success">绑定手机号码成功</string>
    <string name="hint_phone_number_error">手机号码格式不正确</string>
    <string name="hint_phone_number_illegal">您输入的手机号码非注册手机号码</string>
    <string name="hint_input_auth_code">请输入6位数验证码</string>
    <string name="hint_security_code">请输入验证码</string>
    <string name="hint_setting_password">请设置登录密码(不少于6位)</string>
    <string name="hint_new_password">请输入新密码(不少于6位)</string>
    <string name="hint_new_password_again">请再次输入新密码</string>
    <string name="password_not_same">两次密码输入不一致</string>
    <string name="obtain_security_code">获取验证码</string>
    <string name="reobtain_security_code">重新获取验证码</string>
    <string name="resend_code">%d s 重新发送</string>
    <string name="security_code_send_success">验证码已发送，请注意查收</string>
    <string name="finish_and_login">完成并登录</string>
    <string name="register_success">注册成功</string>
    <string name="area_code_86">+86</string>
    <string name="area">地区</string>
    <string name="next_step">下一步</string>
    <string name="phone_register">手机号注册</string>
    <string name="security_code_sended">验证码已发送至%s</string>
    <string name="resend_remain_time">%d秒后重新发送</string>
    <string name="vip_privilege">VIP特权</string>
    <string name="share_gift">每日分享·免费领奖</string>
    <string name="vip_privilege_detail">VIP特权详情</string>
    <string name="current_privilege_lever">当前VIP等级</string>
    <string name="advanced_vip">高级VIP</string>
    <string name="growth_value">成长值:</string>
    <string name="vip_welfare">VIP等级福利</string>
    <string name="vip_welfare_detail">查看特权详情</string>
    <string name="copyright">注册即代表您已同意</string>
    <string name="app_red_packet">安马文学的红包</string>
    <string name="bookrack">书架</string>
    <string name="bookstore">书城</string>
    <string name="rank">榜单</string>
    <string name="forum">论坛</string>
    <string name="my">我的</string>
    <string name="get_image_failed">获取图片失败</string>
    <string name="to_login">点击登陆</string>
    <string name="no_login_record">您还没有登录记录哦</string>
    <string name="sign_in">签到</string>
    <string name="sign_in_count">已连续签到%d天</string>
    <string name="sign_in_ed">已签到</string>
    <string name="sign_in_success">签到成功</string>
    <string name="i_know">知道了</string>
    <string name="sign_in_award">签到成功</string>
    <string name="sign_in_hint">每日签到领更多</string>
    <string name="sign_in_give_welfare">随手签到送福利</string>
    <string name="filter">筛选</string>
    <string name="browse_history">浏览记录</string>
    <string name="book_rack_empty">暂无记录</string>
    <string name="find_book">去找书</string>
    <string name="remove_from_book_rack">移出书架</string>
    <string name="read_day">%d 天</string>
    <string name="read_ben">%d 本</string>
    <string name="read_chapter">%d 章</string>
    <string name="read_hour">%d 小时</string>
    <string name="everyone_search">大家都在搜</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清空</string>
    <string name="clear_success">清除成功</string>
    <string name="exit_hint">再按一次退出</string>
    <string name="manage_book_rack">管理书架</string>
    <string name="list_mode">列表模式</string>
    <string name="unreaded">未读过</string>
    <string name="tulongji">倚天屠龙记</string>
    <string name="jinyong">金庸</string>
    <string name="menu_book_lib">书库</string>
    <string name="menu_xuanwu">玄幻</string>
    <string name="menu_romance">言情</string>
    <string name="menu_city">都市</string>
    <string name="menu_ceo">总裁</string>
    <string name="menu_official">官场</string>
    <string name="menu_military">军事</string>
    <string name="menu_immortal">仙侠</string>
    <string name="menu_supernatural">灵异</string>
    <string name="menu_history">历史</string>
    <string name="menu_game">游戏</string>
    <string name="menu_thru">穿越</string>
    <string name="menu_ancient_words">古言</string>
    <string name="menu_modern_words">现言</string>
    <string name="menu_rank">排行</string>
    <string name="highly_recommend">重磅推荐</string>
    <string name="more">更多</string>
    <string name="hot_demand_book">畅销书单</string>
    <string name="new_book_putaway">新书上架</string>
    <string name="hot_book">热门小说</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="recommend_book">同类作品推荐</string>
    <string name="author_zhu">%s 著</string>
    <string name="new_user_freed_read">新用户全场好书免费畅读（剩余%d天）</string>
    <string name="book_detail">书籍详情</string>
    <string name="author_name">作者 %s</string>
    <string name="book_type">类别:%s</string>
    <string name="book_stutus">状态:%s</string>
    <string name="work_count">字数:%s</string>
    <string name="click_count">点击:%s</string>
    <string name="intro_content">简介：%s</string>
    <string name="book_menu">目录</string>
    <string name="book_mark">书签</string>
    <string name="book_chapter_count">连载至%d章</string>
    <string name="pay_tour">打赏</string>
    <string name="top_up_and_pay_tour">充值并打赏</string>
    <string name="pay_tour_history">打赏记录</string>
    <string name="pay_tour_what">打赏了</string>
    <string name="book_comment">书评区</string>
    <string name="comment_user_count">%d人评论</string>
    <string name="comment">评论 </string>
    <string name="send_comment_success">评论发送成功</string>
    <string name="hint_comment">在此输入评论内容 (255字以内)</string>
    <string name="comment_empty">评论内容不可为空</string>
    <string name="reply">回复:</string>
    <string name="comment_detail">书评详情</string>
    <string name="all_reply_count">全部评论 (%d)</string>
    <string name="comment_count">%d条</string>
    <string name="write_comment">写书评</string>
    <string name="look_all_comment">查看全部书评</string>
    <string name="discounts_buy">优惠购买</string>
    <string name="start_read">开始阅读</string>
    <string name="add_to_bookrack">加入书架</string>
    <string name="add_to_bookrack_hint">喜欢这本书就加入书架吧</string>
    <string name="add_bookmark">添加书签</string>
    <string name="add_bookmark_success">书签添加成功</string>
    <string name="added_to_bookrack">已加入书架</string>
    <string name="add_to_bookrack_success">加入书架成功</string>
    <string name="send_comment">发表评论</string>
    <string name="send">发布</string>
    <string name="reply_comment">回复评论</string>
    <string name="hotest_comment">最热书评</string>
    <string name="newest_comment">最新书评</string>
    <string name="coin_short">当前闪闪币不足，请先充值。</string>
    <string name="give_gift_success">礼物打赏成功</string>
    <string name="gift_wall">礼物墙</string>
    <string name="i_want_to_give_gift">我也要送礼</string>
    <string name="gift_666">666</string>
    <string name="gift_flowe">鲜花</string>
    <string name="gift_knapsack">包包</string>
    <string name="gift_diamond">钻戒</string>
    <string name="gift_house">别墅</string>
    <string name="gift_island">私人岛屿</string>
    <string name="total_coin">合计:%s 闪闪币</string>
    <string name="surplus_coin">余额:%s 闪闪币</string>
    <string name="inverted_order">倒序</string>
    <string name="main_body">正文卷</string>
    <string name="book_order">书籍订阅</string>
    <string name="order_this_chapter">订阅本章</string>
    <string name="order_20_chapter">后续20章</string>
    <string name="order_100_chapter">后续100章</string>
    <string name="order_all_chapter">后续所有章节</string>
    <string name="account_balance_coin">账户余额:%s 闪闪币</string>
    <string name="pay_remark">注:已购或者免费章节不会扣费</string>
    <string name="need_cost_coin">实付:%s 闪闪币</string>
    <string name="original_cost_coin">原价:%s </string>
    <string name="top_up_and_buy">充值并购买</string>
    <string name="immediately_buy">立刻购买</string>
    <string name="book_order_success">书籍订阅成功</string>
    <string name="rank_week">周榜</string>
    <string name="rank_month">月榜</string>
    <string name="rank_all">总榜</string>
    <string name="rank_hot_sell">畅销榜</string>
    <string name="rank_click">点击榜</string>
    <string name="rank_collect">收藏榜</string>
    <string name="rank_gift">礼物榜</string>
    <string name="rank_top_1">TOP 1</string>
    <string name="rank_top_2">TOP 2</string>
    <string name="rank_top_3">TOP 3</string>
    <string name="top_up_center">充值中心</string>
    <string name="top_up">充值</string>
    <string name="pay_success">支付成功</string>
    <string name="sure_pay">确认付款</string>
    <string name="pay_money_amount">￥: %s</string>
    <string name="choose_pay_method">请选择支付方式</string>
    <string name="read_coin">闪闪币</string>
    <string name="top_up_and_consume_history">充值消费记录</string>
    <string name="bind_phone">绑定手机</string>
    <string name="modify_password">修改密码</string>
    <string name="play_tour_history">打赏记录</string>
    <string name="my_comment">我的评论</string>
    <string name="my_bookrack">我的书架</string>
    <string name="about_us">关于我们</string>
    <string name="exit_login">退出登录</string>
    <string name="exit_suceesee">退出成功</string>
    <string name="register_and_login">完成并登录</string>
    <string name="my_account">我的账户</string>
    <string name="account_security">账户安全</string>
    <string name="help_center">帮助中心</string>
    <string name="read_day_count">阅读天数</string>
    <string name="read_book_count">看过的书</string>
    <string name="read_page_count">翻过的章数</string>
    <string name="read_hour_count">阅读时间</string>
    <string name="day_count">%d天</string>
    <string name="book_count">%d本</string>
    <string name="page_count">%页</string>
    <string name="hour_count">%d小时</string>
    <string name="discount">%s 折</string>
    <string name="today_read_count">今日已读%d分钟</string>
    <string name="account_balance">闪闪币</string>
    <string name="gift_balance">赠币</string>
    <string name="current_gift_coin">当前赠币</string>
    <string name="version_code">版本:%s</string>
    <string name="version_update">版本更新</string>
    <string name="update_immediately">立刻更新</string>
    <string name="postpone_update">稍后再说</string>
    <string name="immediate_pay">立刻支付</string>
    <string name="previous_chapter">上一章</string>
    <string name="next_chapter">下一章</string>
    <string name="night_mode">夜间</string>
    <string name="contents">目录</string>
    <string name="setting">设置</string>
    <string name="author_tab_home">首页</string>
    <string name="author_tab_writing">写作</string>
    <string name="author_tab_statistics">统计</string>
    <string name="author_tab_me">我的</string>
</resources>