<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvWechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/share_wechat"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/wechat"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/tvFriendCirle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/share_friend_cirle"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/share_friend_cirle"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/tvQQ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/share_qq"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/qq"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/tvQQZone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/share_qq_zone"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/qq_zone"
            android:textColor="@color/secondary_text" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/content_gray_bg" />

    <TextView
        android:id="@+id/tv_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="每日首次分享得赠币" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/cancel"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/txt_size_h4" />
</LinearLayout>