<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etAccountPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:drawableStart="@drawable/login_phone_icon"
            android:drawableLeft="@drawable/login_phone_icon"
            android:drawablePadding="14dp"
            android:gravity="center_vertical|start"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:textSize="@dimen/txt_size_h3" />

        <include layout="@layout/public_line_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableStart="@drawable/login_lock"
                android:drawableLeft="@drawable/login_lock"
                android:drawablePadding="14dp"
                android:gravity="center_vertical|start"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="@dimen/txt_size_h3" />

            <ImageView
                android:id="@+id/ivHide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:padding="16dp"
                android:src="@drawable/login_hide" />
        </RelativeLayout>

        <include layout="@layout/public_line_horizontal" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rect_theme_bg"
            android:enabled="false"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/register"
            android:textColor="#4186E6" />
    </FrameLayout>
</LinearLayout>
