<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:src="@drawable/login_ad" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@drawable/public_line_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/other_login" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@drawable/public_line_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/otherLoginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tvWechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/login_wechat_icon"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/wechat" />

        <TextView
            android:id="@+id/tvQQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:drawableTop="@drawable/login_qq_icon"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/qq" />

        <TextView
            android:id="@+id/tvWeibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/login_weibo_icon"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/weibo"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>
