<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include layout="@layout/public_title_bar"/>


    <EditText
        android:id="@+id/etPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_bind_phone_number"
        android:textSize="@dimen/txt_size_h3"
        android:inputType="phone"
        android:maxLines="1"
        android:layout_marginLeft="16dp"
        android:background="@null"/>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/public_line_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <EditText
            android:id="@+id/etSecurityCode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:hint="@string/hint_security_code"
            android:textSize="@dimen/txt_size_h3"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:layout_marginLeft="16dp"
            android:background="@null"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/public_line_vetical"/>

        <TextView
            android:id="@+id/tvSecurityCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="50dp"
            android:text="@string/obtain_security_code"/>

    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/public_line_horizontal"/>


    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/helf_round_theme_bg"
        android:text="@string/finish"
        android:textColor="@android:color/white" />

</LinearLayout>